[tool.poetry]
name = "stock-market-ds"
version = "0.1.0"
description = "Project to explore the stock market APIs with python"
authors = ["Clark Rutter <c.rutter50@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_market_ds"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
plotly = "^5.19.0"
yfinance = "^0.2.36"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pandas-ta = "^0.3.14b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
